GNOME Bugzilla – Bug 643041
(evolution:3021): Gtk-CRITICAL **: gtk_render_slider: assertion `height > 0' failed
Last modified: 2011-02-28 12:54:22 UTC
evolution 2.91.91 gtk+ 3 I have a unread search folder (which contains all unread mails). When i right click on search folder, select 'property' and click on 'add condition'. The box size is too small to show second condition which i just added, when i scroll to see second condition, i see warning on evolution terminal. (gdb) bt
+ Trace 226067
Continuing. (evolution:3021): Gtk-CRITICAL **: gtk_render_slider: assertion `height > 0' failed
Moving to gtk+. Couldn't find a dupe.
I think we should go through and systematically ensure that all gtk_render functions are silent no-ops if width == 0 or height == 0
(In reply to comment #2) > I think we should go through and systematically ensure that all gtk_render > functions are silent no-ops if width == 0 or height == 0 I've ended up thinking the same about that, it's not such a big deal if that happens, I'll do that