Don't assert on zero width/height in render functions

We can just silently ignore those rendering calls.
https://bugzilla.gnome.org/show_bug.cgi?id=643041